Restructure of API endpoints